# ii-researcher

./: .env.example  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  api.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release_pypi.yaml  release_testpypi.yaml
docker/: Dockerfile.api
examples/ii_search_4b/: README.md
frontend/: package-lock.json
frontend/app/: page.tsx
frontend/components/: question-input.tsx
ii_researcher/: __init__.py  cli.py
ii_researcher/pipeline/: agent.py
ii_researcher/reasoning/: agent.py  config.py
ii_researcher/reasoning/tools/: __init__.py  python_executer.py
ii_researcher/tool_clients/: search_client.py
ii_researcher/tool_clients/compressor/: llm_compressor.py
ii_researcher/tool_clients/scraper/: __init__.py  scraper.py
ii_researcher/tool_clients/scraper/crw/: crw.py
ii_researcher/utils/: schemas.py  stream.py
ii_researcher_legacy/: README.md
ii_researcher_legacy/ii_researcher/: cli.py
ii_researcher_legacy/ii_researcher/pipeline/: agent.py  evaluator.py  schemas.py  state.py
ii_researcher_legacy/ii_researcher/pipeline/action_handler/: answer.py  base.py  reflect.py  search.py  visit.py
ii_researcher_legacy/ii_researcher/tool_clients/: scrape_client.py
ii_researcher_legacy/ii_researcher/tool_clients/compressor/: embedding_compressor.py  llm_compressor.py
ii_researcher_legacy/ii_researcher/utils/: stream.py
tests/reasoning/: test_agent.py
tests/tool_clients/: test_search_client.py
tests/tool_clients/scraper/: test_scraper.py
