[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "ii-researcher"
version = "0.1.6"
description = "An open-source deep search agent that browses the web, reasons over what it finds, and writes comprehensive, referenced answers to hard questions."
authors = [
    {name = "Intelligent Internet", email = "emad@ii.inc"},
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = [
    "ai",
    "agent",
    "deep-research",
    "web-search",
    "llm",
    "research-assistant",
    "mcp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "baml-py==0.77.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "requests>=2.32.3",
    "bs4>=0.0.2",
    "markdownify>=1.0.0",
    "readability-lxml>=0.8.1",
    "lxml[html-clean]>=5.3.1",
    "tavily-python>=0.5.1",
    "colorama>=0.4.6",
    "langchain-community>=0.3.18",
    "yt-dlp>=2025.2.19",
    "click>=8.1.8",
    "langchain-openai>=0.3.7",
    "pymupdf>=1.25.3",
    "markdown>=3.7",
    "clean-text[gpl]>=0.6.0",
    "litellm[proxy]>=1.63.6",
    "uvicorn>=0.29.0",
    "baml-cli>=0.1.0"
]

[project.urls]
Homepage = "https://github.com/Intelligent-Internet/ii-researcher"
Repository = "https://github.com/Intelligent-Internet/ii-researcher"
Documentation = "https://github.com/Intelligent-Internet/ii-researcher#readme"
"Blog Post" = "https://www.ii.inc/web/blog/post/ii-researcher"
"Bug Tracker" = "https://github.com/Intelligent-Internet/ii-researcher/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
    # Add development dependencies here
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ii_researcher*"]
